— Add N27 paid font as stopgap — Tweak Manifesto closing lines

--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -30,3 +30,18 @@ https://github.com/styled-components/styled-components/issues/2227 */
     font-weight : 400;
     font-style  : italic;
 }
+
+/* N27 ============================================================================================================= */
+@font-face {
+    font-family : "N27";
+    src         : url("../assets/fonts/n27/n27-regular-webfont.woff2") format("woff2");
+    font-weight : 400;
+    font-style  : normal;
+}
+
+@font-face {
+    font-family : "N27";
+    src         : url("../assets/fonts/n27/n27-bold-webfont.woff2") format("woff2");
+    font-weight : 400;
+    font-style  : italic;
+}
